--- a/html/index.html
+++ b/html/index.html
@@ -20,6 +20,6 @@
 </head>
 <body>
     <h1>Welcome to My Website</h1>
-    <p>This is a This is a basic OCP Source to Image TEST!!.</p>
+    <p>This is a basic OCP Source to Image TEST!!.Thanks Atul</p>
 </body>
 </html>
